<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:text="Een uitdaging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/ColorWhite"
        android:background="@color/colorDarkPink"
        android:id="@+id/item_title"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingRight="@dimen/fab_margin"
        android:paddingLeft="@dimen/fab_margin"
        android:layout_alignParentTop="true" />

    <TextView
        android:text="@string/done_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/ColorBlack"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingRight="@dimen/fab_margin"
        android:paddingLeft="@dimen/fab_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <Button
            android:id="@+id/yes"
            android:text="@string/yes"
            android:layout_width="0dp"
            android:layout_weight=".33"
            android:layout_height="wrap_content"
            android:textColor="@color/ColorWhite"
            android:background="@color/colorPink"
            android:adjustViewBounds="true" />

        <Button
            android:id="@+id/no"
            android:text="@string/no"
            android:layout_width="0dp"
            android:layout_weight=".33"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:textColor="@color/ColorWhite"
            android:background="@color/colorPink"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin" />

        <Button
            android:id="@+id/partial"
            android:text="@string/partial"
            android:layout_width="0dp"
            android:layout_weight=".33"
            android:layout_height="wrap_content"
            android:textColor="@color/ColorWhite"
            android:background="@color/colorPink"
            android:adjustViewBounds="true" />

    </LinearLayout>

</LinearLayout>