<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.jgz.jgzafvalapp.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/my_information"
            android:text="@string/my_information"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightBlue"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="@dimen/fab_margin"
            android:textColor="@color/ColorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/my_information"
            android:id="@+id/information_layout"
            android:layout_alignParentStart="true"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:text="@string/my_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:id="@+id/my_name"
                android:layout_alignParentEnd="true"
                android:fontFamily="sans-serif"
                android:paddingBottom="@dimen/fab_margin"
                android:textColor="@color/ColorBlack"
                android:textSize="18sp" />

            <TextView
                android:text="@string/my_birth_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_name"
                android:layout_alignParentStart="true"
                android:id="@+id/my_birth_date"
                android:layout_alignParentEnd="true"
                android:paddingBottom="@dimen/fab_margin"
                android:textSize="18sp"
                android:textColor="@color/ColorBlack" />

            <TextView
                android:text="@string/my_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_birth_date"
                android:layout_alignParentStart="true"
                android:id="@+id/my_length"
                android:layout_alignParentEnd="true"
                android:paddingBottom="@dimen/fab_margin"
                android:textSize="18sp"
                android:textColor="@color/ColorBlack" />

            <TextView
                android:text="@string/my_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_length"
                android:layout_alignParentStart="true"
                android:id="@+id/my_gender"
                android:layout_alignParentEnd="true"
                android:paddingBottom="@dimen/fab_margin"
                android:textSize="18sp"
                android:textColor="@color/ColorBlack" />

            <TextView
                android:text="@string/my_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_gender"
                android:layout_alignParentStart="true"
                android:id="@+id/my_weight"
                android:layout_alignParentEnd="true"
                android:textSize="18sp"
                android:textColor="@color/ColorBlack" />

        </LinearLayout>

        <TextView
            android:id="@+id/my_notifications"
            android:text="@string/my_notifications"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightBlue"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="@dimen/fab_margin"
            android:layout_below="@+id/information_layout"
            android:textColor="@color/ColorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/my_notifications"
            android:id="@+id/notification_layout"
            android:layout_alignParentStart="true"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <Switch
            android:text="@string/breakfast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notification_layout"
            android:layout_alignParentStart="true"
            android:id="@+id/breakfast_title"
            android:layout_alignParentEnd="true"
            android:textSize="18sp" />

            <TextView
                android:text="Dagelijks om: 10:00 uur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/breakfast_title"
                android:layout_alignParentStart="true"
                android:id="@+id/breakfast_subtitle"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/fab_margin"
                android:textSize="12sp" />

            <View
                android:layout_height="1dp"
                android:background="@color/ColorDarkerGray"
                android:layout_width="match_parent" />

            <Switch
                android:text="@string/lunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/breakfast_title"
                android:layout_alignParentStart="true"
                android:id="@+id/lunch_title"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/fab_margin"
                android:textSize="18sp" />

            <TextView
                android:text="Dagelijks om: 10:00 uur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lunch_title"
                android:layout_alignParentStart="true"
                android:id="@+id/lunch_subtitle"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/fab_margin"
                android:textSize="12sp" />

            <View
                android:layout_height="1dp"
                android:background="@color/ColorDarkerGray"
                android:layout_width="match_parent" />

            <Switch
                android:text="@string/dinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dinner_title"
                android:layout_alignParentStart="true"
                android:id="@+id/dinner_title"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/fab_margin"
                android:textSize="18sp" />

            <TextView
                android:text="Dagelijks om: 10:00 uur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dinner_title"
                android:layout_alignParentStart="true"
                android:id="@+id/dinner_subtitle"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/fab_margin"
                android:textSize="12sp" />

            <View
                android:layout_height="1dp"
                android:background="@color/ColorDarkerGray"
                android:layout_width="match_parent" />

            <Switch
                android:text="@string/challenges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dinner_subtitle"
                android:layout_alignParentStart="true"
                android:id="@+id/challenges_title"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/fab_margin"
                android:textSize="18sp" />

            <TextView
                android:text="Dagelijks om: 10:00 uur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/challenges_title"
                android:layout_alignParentStart="true"
                android:id="@+id/challenges_subtitle"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/fab_margin"
                android:textSize="12sp" />

            <View
                android:layout_height="1dp"
                android:background="@color/ColorDarkerGray"
                android:layout_width="match_parent" />

            <Button
                android:text="Log uit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:textColor="@color/ColorWhite"
                android:background="@color/colorLightBlue"
                android:id="@+id/logout" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
